crates/php-parser/tests/snapshots/integration__expr_throw.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "test"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "ThrowExpr": {
                        "kind": {
                          "Variable": "x"
                        },
                        "span": {
                          "start": 17,
                          "end": 19
                        }
                      }
                    },
                    "span": {
                      "start": 11,
                      "end": 19
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 11,
                    "end": 19
                  }
                }
              ]
            }
          },
          "span": {
            "start": 6,
            "end": 20
          }
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "NullCoalesce": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 22,
                  "end": 24
                }
              },
              "right": {
                "kind": {
                  "ThrowExpr": {
                    "kind": {
                      "New": {
                        "class": {
                          "kind": {
                            "Identifier": "Exception"
                          },
                          "span": {
                            "start": 38,
                            "end": 47
                          }
                        },
                        "args": []
                      }
                    },
                    "span": {
                      "start": 34,
                      "end": 47
                    }
                  }
                },
                "span": {
                  "start": 28,
                  "end": 47
                }
              }
            }
          },
          "span": {
            "start": 22,
            "end": 47
          }
        }
      },
      "span": {
        "start": 22,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
