crates/php-parser/tests/snapshots/integration__expr_uvs_globalnonsimplevarerror.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Global": [
          {
            "kind": {
              "PropertyAccess": {
                "object": {
                  "kind": {
                    "VariableVariable": {
                      "kind": {
                        "Variable": "foo"
                      },
                      "span": {
                        "start": 14,
                        "end": 18
                      }
                    }
                  },
                  "span": {
                    "start": 13,
                    "end": 18
                  }
                },
                "property": {
                  "kind": {
                    "Identifier": "bar"
                  },
                  "span": {
                    "start": 20,
                    "end": 23
                  }
                }
              }
            },
            "span": {
              "start": 13,
              "end": 23
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 24
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 24
  }
}
